# mcp-testing

./: .env.template  .gitignore  README.MD  README.md  TODO.md  example.ipynb  example.py  pyproject.toml
docs/: progress.md
notebooks/: 001_openai-api_testing.ipynb
scripts/: client.sh  deps.sh  inspect.sh  server.sh
src/client/: client.py  llm_client.py  main.py
src/server/: main.py
